--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="user manegment system"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/ums_logo.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>UMS</title>
   </head>
